# scaling-bassoon

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/scaling_bassoon/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
