[tool.poetry]
name = "scaling-bassoon"
version = "0.1.0"
authors = ["Nikita Subbotin <sub.nik.and@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/inkoit/scaling-bassoon"
repository = "https://github.com/inkoit/scaling-bassoon"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
scaling-bassoon = "scaling_bassoon.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
