[tool.poetry]
name = "scaling-bassoon"
version = "0.1.0"
authors = ["Nikita Subbotin <sub.nik.and@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/inkoit/scaling-bassoon"
repository = "https://github.com/inkoit/scaling-bassoon"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.25.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
safety = "^1.10.3"
flake8-isort = "^4.0.0"
mypy = "^0.812"
typeguard = "^2.12.0"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.5"
Pygments = "^2.9.0"
Sphinx = "^4.1.1"
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.scripts]
scaling-bassoon = "scaling_bassoon.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["scaling_bassoon"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
